--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -14,5 +14,5 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "nativewind-env.d.ts"
-, "app/about.jsx", "app/_layout.jsx", "app/index.jsx"  ]
+, "app/(tabs)/about/about.jsx", "app/_layout.jsx", "app/index.jsx"  ]
 }
